Quick fixes/changes
- Fixed scrollbar issue
- Removed unnecessary code

--- a/SP23.P03.Web/ClientApp/src/pages/About/about.css
+++ b/SP23.P03.Web/ClientApp/src/pages/About/about.css
@@ -13,6 +13,7 @@
 }
 
 .pic{
+  white-space: nowrap;
   height: 500px;
   width:  475px;
 }
