--- a/SP23.P03.Web/ClientApp/src/pages/Login-Page/login-page.css
+++ b/SP23.P03.Web/ClientApp/src/pages/Login-Page/login-page.css
@@ -7,8 +7,7 @@
 }
 body{
   background: #1b1b1b;
-  overflow-x: auto;
-  overflow-y: auto;
+  overflow: auto;
 }
 ::selection{
   background: rgba(26,188,156,0.3);
