--- a/SP23.P03.Web/ClientApp/src/pages/SignUp-Page/signup-page.css
+++ b/SP23.P03.Web/ClientApp/src/pages/SignUp-Page/signup-page.css
@@ -12,8 +12,7 @@
   align-items: center;
   padding: 10px;
   background: #1b1b1b;
-  overflow-x: auto;
-  overflow-y: auto;
+  overflow: auto;
 }
 .container{
   max-width: 700px;
